// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaTile snapshot test 1`] = `
<div
  className="sc-bwzfXH jdYsVk"
  src={undefined}
>
  <h3
    className="sc-htpNat zuFVL"
  >
    <img
      alt="Channel 7 Logo"
      className="sc-bxivhb hzIzrW sc-bdVaJa dGtWke"
      src="logo.png"
    />
  </h3>
</div>
`;

exports[`MediaTile snapshot test with custom image 1`] = `
<div
  className="sc-bwzfXH kDvvKZ"
  src="https://loremflickr.com/320/240/food,cook,kitchen/all"
>
  <h3
    className="sc-htpNat zuFVL"
  >
    <img
      alt="Channel 7 Logo"
      className="sc-bxivhb hzIzrW sc-bdVaJa dGtWke"
      src="logo.png"
    />
  </h3>
</div>
`;
